@@ -4,12 +4,16 @@ import py_compile
 import struct
 
 from imp import get_magic
+from sha import sha
+from UserDict import UserDict
+
+from z3c.pt.config import FILECACHE
 
 MAGIC = get_magic()
 
-def code_read(self, filename, timestamp):
+def code_read(filename, timestamp):
     code = None
-    if os.path.isfile(self.code_filename):
+    if os.path.isfile(filename):
         fd = open(filename, 'rb')
         if fd.read(4) == MAGIC:
             ctimestamp = struct.unpack('<I', fd.read(4))[0]
@@ -18,11 +22,10 @@ def code_read(self, filename, timestamp):
         fd.close()
     return code
 
-def code_write(self, source, filename, timestamp):
+def code_write(code, filename, timestamp):
     try:
         fd = open(filename, 'wb')
         try:
-            code = compile(source, filename, "exec")
             # Create a byte code file. See the py_compile module
             fd.write('\0\0\0\0')
             fd.write(struct.pack("<I", timestamp))
@@ -35,3 +38,33 @@ def code_write(self, source, filename, timestamp):
         py_compile.set_creator_type(filename)
     except (IOError, OSError):
         pass
+
+class CachingDict(UserDict):
+
+    def __init__(self, filename, mtime, pagetemplate):
+        UserDict.__init__(self)
+
+        if FILECACHE:
+            # Update ourselves with the values from the cache file
+            filename = sha(filename).hexdigest()
+            self.cachedir = os.path.join(FILECACHE, filename)
+            self.mtime = mtime
+
+            if os.path.isdir(self.cachedir):
+                for cachefile in os.listdir(self.cachedir):
+                    value = None
+                    cachepath = os.path.join(self.cachedir, cachefile)
+                    code = code_read(cachepath, self.mtime)
+                    if code is not None:
+                        self[int(cachefile)] = pagetemplate.execute(code)
+                        pagetemplate._v_last_read = mtime
+
+    # If we don't have a file cache, behave like a normal instance level dict
+    if FILECACHE:
+        def store(self, params, code):
+            key = hash(''.join(params))
+            if not os.path.isdir(self.cachedir):
+                os.mkdir(self.cachedir)
+
+            cachefile = os.path.join(self.cachedir, str(key))
+            code_write(code, cachefile, self.mtime)
